--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ header ul li a:hover {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("https://blog.blacklane.com/wp-content/uploads/2019/02/Untitled-design-5.png");
+  background-image: url("assets/images/wisconsin_capital.png");
   background-size: cover;
 }
 /*end nav section*/
