--- a/assets/css/body_style.css
+++ b/assets/css/body_style.css
@@ -1,5 +1,5 @@
 .banner {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100vh;
   background-image: url("/assets/images/wisconsin_capital.png");
