--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,7 @@ header ul li a:hover {
   right: 40px;
   width: 60px;
   height: 60px;
-  background: #fff url(http://st2.depositphotos.com/5266903/7830/v/170/depositphotos_78309498-Arrow-up-flat-soft-blue.jpg);
+  background: #fff url(assets/images/arrow-up-blue.jpg);
   border-radius: 50%;
   background-size: 40px;
   background-position: center;
