--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ header.active {
 header .logo {
   background-color: red;
   position: relative;
-  padding: 25px;
+  margin: 25px;
   font-size: 3vw;
   color: black;
   text-decoration: none;
