--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ header .logo {
   background-color: red;
   position: relative;
   width: auto;
-  height: 100%;
+  height: 78px;
   font-size: 3vw;
   color: black;
   text-decoration: none;
