--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,7 @@ header .logo {
   position: relative;
   width: auto;
   height: 78px;
+  padding: 30px;
   font-size: 3vw;
   color: black;
   text-decoration: none;
@@ -154,6 +155,7 @@ header ul {
   background-color: pink;
   position: relative;
   display: flex;
+  height: 78px;
   padding: inherit;
   margin-right: 0px;
   justify-content: center;
