--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ header .logo {
   position: relative;
   width: auto;
   height: 78px;
-  padding: 15px;
+  padding: 10px;
   font-size: 3vw;
   color: black;
   text-decoration: none;
@@ -158,6 +158,7 @@ header ul {
   background-color: pink;
   position: relative;
   display: flex;
+  width: auto;
   height: 78px;
   padding: inherit;
   margin-right: 0px;
