--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ $phone: 480px;
     color: blue !important;
   }
   header logo {
-    font-size: 5vw;
+    font-size: 50px;
   }
   #social {
     display: none;
