--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -14,6 +14,7 @@ $phone: 480px;
   header {
     height: 100px !important;
     background-color: blue !important;
+    color: white;
   }
   header logo {
     font-size: 75px;
