--- a/assets/css/footer_style.css
+++ b/assets/css/footer_style.css
@@ -25,7 +25,7 @@ foot h3 {
 #foot #contact H3{
   color: white;
   padding: 5px;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 #footer {
   margin: 0px;
