--- a/assets/css/tablet_style.css
+++ b/assets/css/tablet_style.css
@@ -33,6 +33,9 @@ $phone: 480px;
     margin-right: 25px;
     border-radius: 5px;
 }
+content .social-buttons {
+    display: visible;
+  }
   #content-wrapper {
     font-size: 5px;
   }
