--- a/assets/css/laptop_style.css
+++ b/assets/css/laptop_style.css
@@ -12,6 +12,9 @@ $phone: 480px;
   #hyper-links {
     background-color: blue;
   }
+  content .social-buttons {
+    display: none;
+  }
   #content-text {
     flex-direction: column;
   }
