--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,9 @@ body {
   border: 1px solid black;
   background-color: rgba(0, 0, 0, .50);
 }
+content .social-buttons {
+    display: none;
+  }
 #content h3 {
   color: black;
   padding-top: 60px;
