--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ body {
   background-color: rgba(0, 0, 0, .50);
 }
 content .social-buttons {
-    display: none;
+    display: ;
   }
  content .buttons {
    background-color: red;
