--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -52,7 +52,7 @@ $phone: 480px;
   background-size: 60px !important;
 }
 content .social-buttons {
-    display: visible;
+    display: ;
   }
   #content-wrapper {
     font-size: 30px !important;
