--- a/assets/css/tablet_style.css
+++ b/assets/css/tablet_style.css
@@ -34,7 +34,7 @@ $phone: 480px;
     border-radius: 5px;
 }
 content .social-buttons {
-    display: visible;
+    display: ;
   }
   #content-wrapper {
     font-size: 5px;
