--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,13 +91,17 @@ body {
   border: 1px solid black;
   background-color: rgba(0, 0, 0, .50);
 }
-content .social-buttons {
-    display: ;
-  }
+
  content .buttons {
    background-color: red;
    width: auto;
    height: auto;
+ }
+ content .buttons .social-buttons {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
  }
 #content h3 {
   color: black;
