--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ body {
  content .buttons {
    background-color: red;
    width: auto;
-   height: auto;
+   height: 350px;
  }
  content .buttons .social-buttons {
   position: relative;
@@ -114,7 +114,7 @@ body {
   text-decoration: none;
   color: black;
   letter-spacing: 2px;
-  font-weight: 500px;
+  font-size: 50px;
  }
 #content h3 {
   color: black;
