--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,28 +93,31 @@ body {
 }
 
  content .buttons {
-   background-color: red;
+   background-color: ;
    width: auto;
-   height: 100px;
+   height: 75px;
+   display: flex;
+   justify-content: space-around;
  }
  content .buttons .social-buttons {
-  position: relative;
+  position: ;
   display: flex;
-  justify-content: center;
+  justify-content: ;
   align-items: center;
  }
  content .buttons .social-buttons li {
-   position: relative;
+   position: ;
    list-style: none;
  }
  content .buttons .social-buttons li a {
-  position: relative;
-  margin: 0 15px;
-  padding: 14px;
+  position: ;
+  margin: 30px;
+  padding: 20px;
   text-decoration: none;
   color: black;
-  letter-spacing: 2px;
+  letter-spacing: 5px;
   font-size: 30px;
+  font-weight: bolder;
  }
 #content h3 {
   color: black;
