--- a/assets/css/tablet_style.css
+++ b/assets/css/tablet_style.css
@@ -8,7 +8,7 @@ $phone: 480px;
 
 @media only screen and (max-width:768px) and (min-width: 480px) {
   body {
-    background-color: pink;
+    background-color: ;
   }
   header #list {
     display: none;
