--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -9,9 +9,17 @@ $phone: 480px;
 
 
 @media only screen and (max-device-width:480px) and (min-width:200px) {
-  @media screen and (orientation: portrait) {
-    ...
+ @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
   }
+}
   header {
     height: 100px !important;
     background-color: rgba(0,0,100,1.00) !important;
